[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bayeseor"
version = "0.1.0"
description = "A Bayesian approach to estimating the power spectrum of the Epoch of Reionization (EoR) from interferometric observations."
authors = [{name="Peter Sims"}, {name="Jacob Burba"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy",
    "astropy-healpix",
    "h5py",
    "jsonargparse",
    "numpy",
    "pymultinest",
    "pyuvdata",
    "rich",
    "scipy"
]
dynamic = ["version"]

[project.optional-dependencies]
doc = ["sphinx"]

[tool.setuptools]
packages = ["bayeseor"]
