[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "bayeseor"
description = "A Bayesian approach to estimating the power spectrum of the Epoch of Reionization (EoR) from interferometric observations."
authors = [{name="Peter Sims"}, {name="Jacob Burba"}]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.10"
dependencies = [
    "astropy",
    "astropy-healpix",
    "h5py",
    "jsonargparse",
    "numpy",
    "pymultinest",
    "pyuvdata",
    "rich",
    "scipy",
    "setuptools_scm"
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "sphinx",
    "matplotlib"
]

[tool.setuptools_scm]
write_to = "bayeseor/_version.py"
parentdir_prefix_version = "bayeseor-"
fallback_version = "0.0.0"

[tool.setuptools]
packages = ["bayeseor"]
